[gd_scene load_steps=4 format=3 uid="uid://dnqwx2yywnbga"]

[ext_resource type="Script" path="res://scripts/NPC.gd" id="1_npc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1"]
size = Vector2(30, 30)

[sub_resource type="CircleShape2D" id="CircleShape2D_1"]
radius = 50.0

[node name="NPC" type="CharacterBody2D" groups=["npcs"]]
script = ExtResource("1_npc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_1")

[node name="NPCSprite" type="ColorRect" parent="."]
offset_left = -15.0
offset_top = -15.0
offset_right = 15.0
offset_bottom = 15.0
color = Color(0.6, 0.4, 0.8, 1)

[node name="NameLabel" type="Label" parent="."]
offset_left = -50.0
offset_top = -35.0
offset_right = 50.0
offset_bottom = -20.0
text = "NPC"
horizontal_alignment = 1

[node name="InteractionHint" type="Label" parent="."]
offset_left = -30.0
offset_top = 20.0
offset_right = 30.0
offset_bottom = 35.0
text = "[E] Talk"
horizontal_alignment = 1

[node name="InteractionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea"]
shape = SubResource("CircleShape2D_1")

[connection signal="body_entered" from="InteractionArea" to="." method="_on_interaction_area_body_entered"]
[connection signal="body_exited" from="InteractionArea" to="." method="_on_interaction_area_body_exited"]
